# zygote-reader

./: .editorconfig  .gitignore  README.md  pyproject.toml
pelican/plugins/zygote_reader/: __init__.py  zygote_reader.py
